--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "svelte": "^5.15.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
 }
